--- a/сss/style.css
+++ b/сss/style.css
@@ -23,6 +23,69 @@ button {
 img {
   display: block;
 }
+
+/* ----------------------------------------HERO------------HERO--------------------------- */
+
+.hero {
+  max-width: 1920px;
+  padding-top: 226px;
+  padding-bottom: 33px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(180, 180, 174);
+  background-image: url(../images/category/Главный-экран.jpg);
+  background-size: cover;
+}
+
+.hero__title {
+  font-family: PT Serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 90px;
+  line-height: 1.44;
+  max-width: 724px;
+  margin-bottom: 8px;
+  color: #ffffff;
+}
+.hero__text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 28px;
+  max-width: 562px;
+  letter-spacing: 1.8px;
+  margin-bottom: 113px;
+  color: #ffffff;
+}
+
+.hero__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: calc(21 / 18);
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 20px 53px;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 30px;
+  display: inline-block;
+  margin-bottom: 184px;
+}
+.hero__link2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
